# sdnq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
benchmarks/: amd_rx_7900xtx.txt  intel_arc_b580  nvidia_rtx_4090.txt
benchmarks/inference/: amd_rx_7900xtx.txt  intel_arc_a770.txt  nvidia_rtx_3090.txt  nvidia_rtx_4090.txt  nvidia_rtx_5090.txt  nvidia_rtx_pro_6000.txt
benchmarks/training/: amd_rx_7900xtx.txt  intel_arc_a770.txt  nvidia_rtx_3090.txt  nvidia_rtx_4090.txt  nvidia_rtx_5090.txt  nvidia_rtx_pro_6000.txt
scripts/: benchmark_sdnq.py  benchmark_sdnq_inference.py  benchmark_sdnq_inference_full.py  benchmark_sdnq_inference_matmul.py  benchmark_sdnq_training.py  benchmark_sdnq_training_matmul.py  dequantize_sdnq_training.py
src/sdnq/: __init__.py  common.py  dequantizer.py  kernel_wrappers.py  loader.py  packed_float.py  quant_utils.py  quantizer.py  sdnext.py  triton_mm.py  utils.py
src/sdnq/kernels/: openvino_mm.py  triton_atten.py
src/sdnq/layers/: __init__.py  wrapper.py
src/sdnq/layers/conv/: conv_fp16.py
src/sdnq/layers/embedding/: forward.py
src/sdnq/layers/linear/: linear_fp16.py  linear_fp8.py  linear_fp8_tensorwise.py  linear_int8.py
src/sdnq/optim/: __init__.py  adafactor.py  adafactor_bf16.py  adamw.py  came.py  lion.py  muon.py  optimizer.py  optimizer_class.py  stochastic.py  utils.py
src/sdnq/packed_int/: __init__.py  pack.py  unpack.py
src/sdnq/training/: __init__.py  dequantizer.py  forward.py  tensor.py
src/sdnq/training/layers/linear/: forward.py  linear_fp16.py  linear_fp16_ckpt.py  linear_fp16_dynamic.py  linear_fp16_dynamic_ckpt.py  linear_fp8.py  linear_fp8_ckpt.py  linear_fp8_dynamic.py  linear_fp8_dynamic_ckpt.py  linear_fp8_tensorwise.py  linear_fp8_tensorwise_ckpt.py  linear_fp8_tensorwise_dynamic.py  linear_fp8_tensorwise_dynamic_ckpt.py  linear_int8.py  linear_int8_ckpt.py  linear_int8_dynamic.py  linear_int8_dynamic_ckpt.py  triton_mm.py
src/sdnq/training/layers/linear/linear_fp16/: linear_fp16.py  linear_fp16_ckpt.py  linear_fp16_dynamic.py  linear_fp16_dynamic_ckpt.py
src/sdnq/training/layers/linear/linear_fp8/: linear_fp8.py  linear_fp8_ckpt.py  linear_fp8_dynamic.py  linear_fp8_dynamic_ckpt.py
src/sdnq/training/layers/linear/linear_fp8_scaled/: linear_fp8_scaled.py  linear_fp8_scaled_ckpt.py  linear_fp8_scaled_dynamic.py  linear_fp8_scaled_dynamic_ckpt.py
src/sdnq/training/layers/linear/linear_int8/: linear_int8.py  (+3 more)
src/sdnq_optimizers/: adafactor_bf16.py  adamw.py  came.py  muon.py
src/sdnq_training/: __init__.py
src/sdnq_training/layers/linear/: forward.py  linear_int8_ckpt.py  linear_int8_dynamic.py
(+4 files in other folders)
